# reddit-api-scraper

./: Cargo.toml  README.md  openapi.json
.github/: dependabot.yml
src/: api_scraper.rs  generator.rs  http_verb.rs  main.rs  openapi_models.rs  openapi_writer.rs  template_uri.rs
src/handlebars/: http_get.handlebars  http_get_wrapper.handlebars  http_post.handlebars
