[package]
name = "reddit_api_scraper"
version = "0.1.0"
authors = ["Toby Murray <murray.toby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.12"
regex = "1"
handlebars = "4.1"
Inflector = "0.11"
